Added header banner

--- a/DataScienceTutorial/DataScienceEcosystem.ipynb
+++ b/DataScienceTutorial/DataScienceEcosystem.ipynb
@@ -2,6 +2,24 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "3366048a",
+   "metadata": {},
+   "source": [
+    "<center>\n",
+    "    <img src=\"https://cf-courses-data.s3.us.cloud-object-storage.appdomain.cloud/IBMDeveloperSkillsNetwork-DS0105EN-SkillsNetwork/labs/Module2/images/SN_web_lightmode.png\" width=\"300\" alt=\"cognitiveclass.ai logo\">\n",
+    "</center>\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "65d264d6",
+   "metadata": {},
+   "source": [
+    "#### Add your code below following the instructions given in the course"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "78937c52-05ff-4803-8a6f-06f627be0f17",
    "metadata": {},
    "source": [
