function explode and selective import

--- a/googlecolab_Spark_notebook.ipynb
+++ b/googlecolab_Spark_notebook.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPYLnkCReeglOrTal0Wmx7F",
+      "authorship_tag": "ABX9TyPP+6sCpR/SjZ1JKdF7m4LV",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,14 +28,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 3,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "collapsed": true,
         "id": "2OcwJQe-Aeea",
-        "outputId": "d247173a-7a90-428a-dc5c-45df4f92cb86"
+        "outputId": "e459a0fd-b9fc-49fb-9d4e-9e504a6a81e2"
       },
       "outputs": [
         {
@@ -44,12 +44,12 @@
           "text": [
             "Collecting pyspark\n",
             "  Downloading pyspark-3.5.2.tar.gz (317.3 MB)\n",
-            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m317.3/317.3 MB\u001b[0m \u001b[31m3.5 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m317.3/317.3 MB\u001b[0m \u001b[31m4.8 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
             "\u001b[?25h  Preparing metadata (setup.py) ... \u001b[?25l\u001b[?25hdone\n",
             "Requirement already satisfied: py4j==0.10.9.7 in /usr/local/lib/python3.10/dist-packages (from pyspark) (0.10.9.7)\n",
             "Building wheels for collected packages: pyspark\n",
             "  Building wheel for pyspark (setup.py) ... \u001b[?25l\u001b[?25hdone\n",
-            "  Created wheel for pyspark: filename=pyspark-3.5.2-py2.py3-none-any.whl size=317812365 sha256=40328d043694c6cb3a222dbca37c9fa55fca7713cf76bfc4caa2201d37ea7e8f\n",
+            "  Created wheel for pyspark: filename=pyspark-3.5.2-py2.py3-none-any.whl size=317812365 sha256=541b0f119648d31a67bae38caf51e4a30f32879ccbdfed74780c84934de75751\n",
             "  Stored in directory: /root/.cache/pip/wheels/34/34/bd/03944534c44b677cd5859f248090daa9fb27b3c8f8e5f49574\n",
             "Successfully built pyspark\n",
             "Installing collected packages: pyspark\n",
@@ -64,12 +64,13 @@
     {
       "cell_type": "code",
       "source": [
-        "import pyspark"
+        "from pyspark.sql import SparkSession\n",
+        "from pyspark.sql import functions as f"
       ],
       "metadata": {
         "id": "lMvGbz9EBIDL"
       },
-      "execution_count": 3,
+      "execution_count": 65,
       "outputs": []
     },
     {
@@ -80,18 +81,18 @@
       "metadata": {
         "id": "6Z1TtxTTDo0A"
       },
-      "execution_count": 6,
+      "execution_count": 49,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "spark = pyspark.sql.SparkSession.builder.appName('practice').getOrCreate()"
+        "spark = SparkSession.builder.appName('practice').getOrCreate()"
       ],
       "metadata": {
         "id": "jHwURiHEBVXk"
       },
-      "execution_count": 4,
+      "execution_count": 50,
       "outputs": []
     },
     {
@@ -108,7 +109,7 @@
       "metadata": {
         "id": "v6IKO-ltDlAS"
       },
-      "execution_count": 8,
+      "execution_count": 51,
       "outputs": []
     },
     {
@@ -120,7 +121,7 @@
       "metadata": {
         "id": "DwZw8URCIgn2"
       },
-      "execution_count": 14,
+      "execution_count": 52,
       "outputs": []
     },
     {
@@ -129,10 +130,47 @@
         "df1.show()"
       ],
       "metadata": {
-        "id": "VArlgR8XGCQG"
+        "id": "VArlgR8XGCQG",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "062ed16b-25e0-44f3-8451-e5db3870648b"
       },
-      "execution_count": 10,
-      "outputs": []
+      "execution_count": 53,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "+--------+--------------------+---------------------+---------------+-------------+----------+------------------+------------+------------+------------+-----------+-----+-------+----------+------------+---------------------+------------+--------------------+-----------+\n",
+            "|VendorID|tpep_pickup_datetime|tpep_dropoff_datetime|passenger_count|trip_distance|RatecodeID|store_and_fwd_flag|PULocationID|DOLocationID|payment_type|fare_amount|extra|mta_tax|tip_amount|tolls_amount|improvement_surcharge|total_amount|congestion_surcharge|Airport_fee|\n",
+            "+--------+--------------------+---------------------+---------------+-------------+----------+------------------+------------+------------+------------+-----------+-----+-------+----------+------------+---------------------+------------+--------------------+-----------+\n",
+            "|       2| 2024-01-01 00:57:55|  2024-01-01 01:17:43|              1|         1.72|         1|                 N|         186|          79|           2|       17.7|  1.0|    0.5|       0.0|         0.0|                  1.0|        22.7|                 2.5|        0.0|\n",
+            "|       1| 2024-01-01 00:03:00|  2024-01-01 00:09:36|              1|          1.8|         1|                 N|         140|         236|           1|       10.0|  3.5|    0.5|      3.75|         0.0|                  1.0|       18.75|                 2.5|        0.0|\n",
+            "|       1| 2024-01-01 00:17:06|  2024-01-01 00:35:01|              1|          4.7|         1|                 N|         236|          79|           1|       23.3|  3.5|    0.5|       3.0|         0.0|                  1.0|        31.3|                 2.5|        0.0|\n",
+            "|       1| 2024-01-01 00:36:38|  2024-01-01 00:44:56|              1|          1.4|         1|                 N|          79|         211|           1|       10.0|  3.5|    0.5|       2.0|         0.0|                  1.0|        17.0|                 2.5|        0.0|\n",
+            "|       1| 2024-01-01 00:46:51|  2024-01-01 00:52:57|              1|          0.8|         1|                 N|         211|         148|           1|        7.9|  3.5|    0.5|       3.2|         0.0|                  1.0|        16.1|                 2.5|        0.0|\n",
+            "|       1| 2024-01-01 00:54:08|  2024-01-01 01:26:31|              1|          4.7|         1|                 N|         148|         141|           1|       29.6|  3.5|    0.5|       6.9|         0.0|                  1.0|        41.5|                 2.5|        0.0|\n",
+            "|       2| 2024-01-01 00:49:44|  2024-01-01 01:15:47|              2|        10.82|         1|                 N|         138|         181|           1|       45.7|  6.0|    0.5|      10.0|         0.0|                  1.0|       64.95|                 0.0|       1.75|\n",
+            "|       1| 2024-01-01 00:30:40|  2024-01-01 00:58:40|              0|          3.0|         1|                 N|         246|         231|           2|       25.4|  3.5|    0.5|       0.0|         0.0|                  1.0|        30.4|                 2.5|        0.0|\n",
+            "|       2| 2024-01-01 00:26:01|  2024-01-01 00:54:12|              1|         5.44|         1|                 N|         161|         261|           2|       31.0|  1.0|    0.5|       0.0|         0.0|                  1.0|        36.0|                 2.5|        0.0|\n",
+            "|       2| 2024-01-01 00:28:08|  2024-01-01 00:29:16|              1|         0.04|         1|                 N|         113|         113|           2|        3.0|  1.0|    0.5|       0.0|         0.0|                  1.0|         8.0|                 2.5|        0.0|\n",
+            "|       2| 2024-01-01 00:35:22|  2024-01-01 00:41:41|              2|         0.75|         1|                 N|         107|         137|           1|        7.9|  1.0|    0.5|       0.0|         0.0|                  1.0|        12.9|                 2.5|        0.0|\n",
+            "|       1| 2024-01-01 00:25:00|  2024-01-01 00:34:03|              2|          1.2|         1|                 N|         158|         246|           1|       14.9|  3.5|    0.5|      3.95|         0.0|                  1.0|       23.85|                 2.5|        0.0|\n",
+            "|       1| 2024-01-01 00:35:16|  2024-01-01 01:11:52|              2|          8.2|         1|                 N|         246|         190|           1|       59.0|  3.5|    0.5|     14.15|        6.94|                  1.0|       85.09|                 2.5|        0.0|\n",
+            "|       1| 2024-01-01 00:43:27|  2024-01-01 00:47:11|              2|          0.4|         1|                 N|          68|          90|           1|        5.8|  3.5|    0.5|      1.25|         0.0|                  1.0|       12.05|                 2.5|        0.0|\n",
+            "|       1| 2024-01-01 00:51:53|  2024-01-01 00:55:43|              1|          0.8|         1|                 N|          90|          68|           2|        6.5|  3.5|    0.5|       0.0|         0.0|                  1.0|        11.5|                 2.5|        0.0|\n",
+            "|       1| 2024-01-01 00:50:09|  2024-01-01 01:03:57|              1|          5.0|         1|                 N|         132|         216|           2|       21.2| 2.75|    0.5|       0.0|         0.0|                  1.0|       25.45|                 0.0|       1.75|\n",
+            "|       1| 2024-01-01 00:41:06|  2024-01-01 00:53:42|              1|          1.5|         1|                 N|         164|          79|           1|       12.8|  3.5|    0.5|      4.45|         0.0|                  1.0|       22.25|                 2.5|        0.0|\n",
+            "|       2| 2024-01-01 00:52:09|  2024-01-01 00:52:28|              1|          0.0|         1|                 N|         237|         237|           2|        3.0|  1.0|    0.5|       0.0|         0.0|                  1.0|         8.0|                 2.5|        0.0|\n",
+            "|       2| 2024-01-01 00:56:38|  2024-01-01 01:03:17|              1|          1.5|         1|                 N|         141|         263|           1|        9.3|  1.0|    0.5|       3.0|         0.0|                  1.0|        17.3|                 2.5|        0.0|\n",
+            "|       2| 2024-01-01 00:32:34|  2024-01-01 00:49:33|              1|         2.57|         1|                 N|         161|         263|           1|       17.7|  1.0|    0.5|      10.0|         0.0|                  1.0|        32.7|                 2.5|        0.0|\n",
+            "+--------+--------------------+---------------------+---------------+-------------+----------+------------------+------------+------------+------------+-----------+-----+-------+----------+------------+---------------------+------------+--------------------+-----------+\n",
+            "only showing top 20 rows\n",
+            "\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -144,9 +182,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "BVFARHHiH5tN",
-        "outputId": "3990c10d-1dab-4a48-c49a-768ffcd0f85f"
+        "outputId": "abb3a830-a065-4b9f-ef7e-43b434e15dea"
       },
-      "execution_count": 15,
+      "execution_count": 54,
       "outputs": [
         {
           "output_type": "stream",
@@ -187,9 +225,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "ZU2fuz2vIGHM",
-        "outputId": "e0d32182-465c-462f-cf94-9158ae94a47b"
+        "outputId": "65446cc0-ee0e-44e2-feb1-6a14f4b1adfb"
       },
-      "execution_count": 16,
+      "execution_count": 55,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -199,7 +237,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 16
+          "execution_count": 55
         }
       ]
     },
@@ -213,9 +251,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "iRM_5VugIXS0",
-        "outputId": "a02919f3-ccb1-4b08-d5e8-f05b0d827abe"
+        "outputId": "dd0e0e65-1b29-4e1b-d4cf-ec2524c57b35"
       },
-      "execution_count": 24,
+      "execution_count": 58,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -225,7 +263,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 24
+          "execution_count": 58
         }
       ]
     },
@@ -239,9 +277,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Heg3jIeqIRB9",
-        "outputId": "c4bcdadc-932b-4a15-df85-1ab5b56a1ea3"
+        "outputId": "50b4ceeb-d1ef-443b-8fc7-a35ef251d124"
       },
-      "execution_count": 28,
+      "execution_count": 59,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -251,7 +289,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 28
+          "execution_count": 59
         }
       ]
     },
@@ -265,9 +303,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "jAbUwgznLnCp",
-        "outputId": "b83174fc-158f-4d53-913f-9dbdedf51edc"
+        "outputId": "109e6ea1-2e3f-4ec6-83c4-feb26583c171"
       },
-      "execution_count": 32,
+      "execution_count": 60,
       "outputs": [
         {
           "output_type": "stream",
@@ -304,9 +342,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "YIPgTKx_Mh8O",
-        "outputId": "51f511eb-ebbc-4df3-e99e-d6483adcde71"
+        "outputId": "f325456c-1821-48cb-dac2-b1c95e0af5a5"
       },
-      "execution_count": 36,
+      "execution_count": 61,
       "outputs": [
         {
           "output_type": "stream",
@@ -321,6 +359,119 @@
             "+--------+------------------+\n",
             "\n"
           ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "arr = [[[2,3,4],'first row'],[[11,22,33],'second row'],[[111,222,333],'third row']]\n",
+        "error_df=spark.createDataFrame(arr,schema=[\"arr\",\"row desc\"])\n"
+      ],
+      "metadata": {
+        "id": "ndQB8mvp4Eb-"
+      },
+      "execution_count": 62,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "error_df.show()"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "ZGeihJ_z8_Aw",
+        "outputId": "badae6cc-ed22-4510-af17-0201f46e471e"
+      },
+      "execution_count": 63,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "+---------------+----------+\n",
+            "|            arr|  row desc|\n",
+            "+---------------+----------+\n",
+            "|      [2, 3, 4]| first row|\n",
+            "|   [11, 22, 33]|second row|\n",
+            "|[111, 222, 333]| third row|\n",
+            "+---------------+----------+\n",
+            "\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "error_df.select(f.explode('arr').alias('arr1_name'),\"row desc\").show()"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "pw4rTeBO9HIW",
+        "outputId": "faedf490-fd90-4818-85e3-836462c14167"
+      },
+      "execution_count": 66,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "+---------+----------+\n",
+            "|arr1_name|  row desc|\n",
+            "+---------+----------+\n",
+            "|        2| first row|\n",
+            "|        3| first row|\n",
+            "|        4| first row|\n",
+            "|       11|second row|\n",
+            "|       22|second row|\n",
+            "|       33|second row|\n",
+            "|      111| third row|\n",
+            "|      222| third row|\n",
+            "|      333| third row|\n",
+            "+---------+----------+\n",
+            "\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "explode might be useful in dealing with JSON dataset where a column can have a array of value. and we want it to normalize."
+      ],
+      "metadata": {
+        "id": "Y09wNzbTMzg5"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "error_df.cache()"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "ctpy1yy_NH_2",
+        "outputId": "01bb4e10-2fd6-45cf-8b19-8547f4b06439"
+      },
+      "execution_count": 67,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "DataFrame[arr: array<bigint>, row desc: string]"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 67
         }
       ]
     }
