--- a/googlecolab_Spark_notebook.ipynb
+++ b/googlecolab_Spark_notebook.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPP+6sCpR/SjZ1JKdF7m4LV",
+      "authorship_tag": "ABX9TyMg/RrC7jgaUULTCP+4IkkT",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -356,6 +356,73 @@
             "|       6|               0.0|\n",
             "|       2| 7700953.170000889|\n",
             "|       1|2188647.1400000826|\n",
+            "+--------+------------------+\n",
+            "\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "df1.createOrReplaceTempView(\"taxi_data\")"
+      ],
+      "metadata": {
+        "id": "wCAxN1jTSn8f"
+      },
+      "execution_count": 68,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "%sql select vendorID, sum(tip_amount) from taxi_data group by VendorID"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "4wICLu5yS0TH",
+        "outputId": "dd324ed3-395e-4504-f35f-d491cec1934a"
+      },
+      "execution_count": 71,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "UsageError: Line magic function `%sql` not found.\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "spark.sql(\"\"\"select vendorID\n",
+        ", sum(tip_amount)\n",
+        "from taxi_data\n",
+        "group by VendorID\"\"\").show()"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "4-5l6PW9TqHu",
+        "outputId": "91a31245-39b9-4f61-f765-553468293996"
+      },
+      "execution_count": 75,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "+--------+------------------+\n",
+            "|vendorID|   sum(tip_amount)|\n",
+            "+--------+------------------+\n",
+            "|       1|2188647.1400000826|\n",
+            "|       2| 7700953.170000889|\n",
+            "|       6|               0.0|\n",
             "+--------+------------------+\n",
             "\n"
           ]
