--- a/googlecolab_Spark_notebook.ipynb
+++ b/googlecolab_Spark_notebook.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMg/RrC7jgaUULTCP+4IkkT",
+      "authorship_tag": "ABX9TyMj3SZOZp4TMBot96W48Kni",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -541,6 +541,19 @@
           "execution_count": 67
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "reading csv data in pyspark dataframe\n",
+        "https://docs.databricks.com/en/ingestion/file-upload/download-internet-files.html\n",
+        "```csv_df=spark.read.csv('https://raw.githubusercontent.com/thewiremonkey/factbook.csv/master/data/c2001.csv',header=True,inferSchema=True)```\n",
+        "<br>\n",
+        "```csv_df.show()```"
+      ],
+      "metadata": {
+        "id": "Wzuzm9egd9Y9"
+      }
     }
   ]
 }
